<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anudeesh.hw2.EditExpenseActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_exp_label"
        android:id="@+id/buttonSelectExp_Edit"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/exp_name_label"
        android:id="@+id/textViewExpName_Edit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextExpNameval_Edit"
        android:layout_marginBottom="5dp"
        android:maxLength="50" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category_label"
        android:id="@+id/textViewCategory_Edit" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/categories"
        android:id="@+id/spinnerCategory_Edit"
        android:prompt="@string/spinner_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amount_label"
        android:id="@+id/textViewAmount_Edit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextAmountVal_Edit" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="251dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date_label"
                android:id="@+id/textViewDate_Edit" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTextDate_Edit" />
        </LinearLayout>

        <ImageView
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:id="@+id/imageCalendar_Edit"
            android:src="@drawable/ic_date_range_black_24dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/receipt_label"
        android:id="@+id/textViewReceipt_Edit"
        android:layout_marginTop="5dp" />
    <ImageView
        android:layout_width="53dp"
        android:layout_height="60dp"
        android:id="@+id/imageFind_Edit"
        android:src="@drawable/ic_find_in_page_black_24dp1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_label"
            android:id="@+id/buttonSave_Edit"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:id="@+id/buttonCancel_Edit"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
